--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 GEMINI_API_KEY="AIzaSyD1rVOqn06YAoqEKWfW1_iM2Z9LZz9kdEE"
 NODE_ENV="production"
-FRONTEND_URL="https://codewithbry.github.io/Chat/"
+FRONTEND_URL="https://codewithbry.github.io/BryTech/"
 PORT=3000
