--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "start": "cd server && node server.js"
     },
     "dependencies": {
+        "@google/generative-ai": "0.24.1",
+        "cors": "2.8.5",
+        "dotenv": "17.2.3",
+        "express": "5.1.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-markdown": "10.1.0",
