--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "react-markdown": "10.1.0",
         "react-router-dom": "7.9.4",
         "react-syntax-highlighter": "15.6.6",
-        "rehype-highlight": "7.0.2"
+        "rehype-highlight": "7.0.2",
+        "rehype-sanitize": "6.0.0",
+        "remark-gfm": "4.0.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.36.0",
